--- a/css/styles.css
+++ b/css/styles.css
@@ -154,6 +154,9 @@ h5 {
   height: 600px;
   flex-shrink: 0;
   gap: 48px;
+  padding-top: 188px;
+  padding-bottom: 292px;
+  align-items: center;
 }
 .title-one {
   color: #ffffff;
@@ -163,12 +166,10 @@ h5 {
   line-height: 1.07;
   letter-spacing: 0.02em;
   background: #2e2f42;
-  padding-top: 188px;
-  margin-bottom: 48px;
+  max-width: 496px;
 }
 .title-container {
-  padding-top: 188px;
-  padding-bottom: 292px;
+  margin: 0 auto;
 }
 
 .order-button {
@@ -184,6 +185,8 @@ h5 {
   display: flex;
   padding: 16px 32px;
   gap: 10px;
+  margin: 0 auto;
+  margin-top: 48px;
 }
 
 .order-button:hover,
@@ -191,7 +194,6 @@ h5 {
   background: var(--ocean);
 }
 /* Друга частина */
-
 
 .advantages-container {
   display: flex;
@@ -207,6 +209,7 @@ h5 {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+  margin-bottom: 8px;
 }
 
 .text-description {
@@ -218,7 +221,6 @@ h5 {
 /* Третя частина */
 
 .business-container {
-margin-top: 0;
 }
 
 .business-list {
@@ -238,7 +240,6 @@ margin-top: 0;
 /* Четверта частина */
 .team {
   background-color: #f4f4fd;
- 
 }
 .team-list {
   padding-top: 72px;
@@ -250,7 +251,8 @@ margin-top: 0;
 }
 .team-container {
   gap: 32px;
-  }
+  text-align: center;
+}
 
 /* Підвал */
 .footer {
@@ -264,6 +266,8 @@ margin-top: 0;
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 .footer-logo-span {
   color: var(--cloud);
@@ -274,9 +278,26 @@ margin-top: 0;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  max-width: 264px;
+}
+
+.footer-container {
+  padding-top: 100px;
+  padding-bottom: 100px;
 }
 
 /* Портфолио */
+
+.buttons-container {
+  padding-top: 96px;
+  padding-bottom: 72px;
+}
+
+.buttons-list {
+  display: flex;
+  gap: 24px;
+  justify-content: center;
+}
 
 .select-button {
   color: var(--iris, #4d5ae5);
@@ -287,6 +308,7 @@ margin-top: 0;
   line-height: 1.5;
   letter-spacing: 0.04em;
   background-color: var(--cloud);
+  padding: 12px 24px;
 }
 
 .select-button:hover,
@@ -300,4 +322,17 @@ margin-top: 0;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.02em;
+
+}
+
+.work-examples {
+
+}
+
+.work-examples-list {
+  display: flex;
+  max-width: 100%;
+  gap: 32px;
+  flex-wrap: wrap;
+
 }
