--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,9 @@ h5 {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+img {
+  display: block
+}
 
 /* Логотип */
 
@@ -66,9 +69,6 @@ h5 {
   color: var(--navyblue);
 }
 
-.img {
-  display: block
-}
 
 .list {
   list-style: none;
@@ -153,9 +153,6 @@ h5 {
   background-color: var(--navyblue);
   padding: 188px 0;
 }
-/* .section {
-  padding: 120px 120px;
-} */
 
 /* Головний заголовок */
 .main-container {
@@ -189,14 +186,13 @@ h5 {
   line-height: 1.5;
   letter-spacing: 0.04em;
   background-color: #4d5ae5;
-  display: block;
   min-width: 169px;
   height: 56px;
   border: none;
   border-radius: 4px;
 }
 .button-container {
-  display: flex;
+  display: block;
   padding: 16px 32px;
   gap: 10px;
   margin: 0 auto;
@@ -213,7 +209,9 @@ h5 {
 }
 
 .advantages-description {
-  flex-basis: calc((100% - 72px) / 4));
+ 
+  flex-basis: calc((100% - 72px) / 4);
+
 }
 
 .advantages-container {
@@ -259,6 +257,10 @@ h5 {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   margin-bottom: 72px;
+}
+
+.work-samples {
+ flex-basis: calc((100% - 3 * 16px) / 3);
 }
 /* Четверта частина */
 .team {
@@ -341,6 +343,7 @@ h5 {
   display: flex;
   gap: 24px;
   justify-content: center;
+  margin-bottom: 72px;
 }
 
 .select-button {
@@ -356,7 +359,6 @@ h5 {
   border: 1px solid #e7e9fc;
   border-radius: 4px;
   display: block;
-  margin-bottom: 72px;
 }
 
 .select-button:hover,
@@ -376,11 +378,13 @@ h5 {
 }
 .name-description {
   padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+  
 }
 
 .work-examples {
-  border: 1px solid #e7e9fc;
-  border-top: none;
+ 
 }
 .work-examples-list {
   display: flex;
@@ -389,6 +393,8 @@ h5 {
   flex-wrap: wrap;
   column-gap: 24px; 
   row-gap: 48px; 
+  border: 1px solid #e7e9fc;
+  border-top: none;
 }
 
 .example {
