--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ img {
   display: flex;
   gap: 24px;
   padding-top: 72px;
-  flex-basis: calc((100% - 3 * 16px) / 3));
+  flex-basis: calc((100% - 3 * 16px) / 3);
 }
 .title-two {
   color: var(--navyblue);
@@ -274,7 +274,7 @@ img {
   padding-top: 72px;
   display: flex;
   gap: 24px;
-  flex-basis: calc((100% - 72px) / 4));
+  flex-basis: calc((100% - 72px) / 4);
   
 }
 .team-list-item {
@@ -380,15 +380,11 @@ img {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
   border-top: none;
-  
+
 }
 
-.work-examples {
- 
-}
 .work-examples-list {
   display: flex;
-  max-width: 100%;
   gap: 32px;
   flex-wrap: wrap;
   column-gap: 24px; 
