changed to .portfolio-example

--- a/css/styles.css
+++ b/css/styles.css
@@ -389,10 +389,10 @@ img {
   flex-wrap: wrap;
   column-gap: 24px; 
   row-gap: 48px; 
-  border: 1px solid #e7e9fc;
   border-top: none;
 }
 
-.example {
+.portfolio-example {
   width: calc((100% - 48px) / 3);
+  border: 1px solid #e7e9fc;
 }
