--- a/css/styles.css
+++ b/css/styles.css
@@ -150,11 +150,10 @@ img {
 .main-container {
   width: 100%;
   height: 600px;
-  flex-shrink: 0;
-  gap: 48px;
+ 
   padding-top: 188px;
   padding-bottom: 292px;
-  align-items: center;
+  
 }
 .title-one {
   color: #ffffff;
@@ -226,6 +225,9 @@ img {
   letter-spacing: 0.02em;
 }
 /* Третя частина */
+.business-section {
+  padding-bottom: 120px;
+}
 
 .business-container {
 }
